--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -159,10 +159,40 @@ const EPOCHS = [
   ]},
 
   
-  { id: 'tema5',  name: 'Il Louvre Napoleonico', files: [ { type:'text', name:'Doc5.txt', src:'media/tema5/tema5.txt' } ] },
-
+    { id: 'tema5',  name: 'Il Louvre nell'Ottocento-Novecento', files: [
+      { type:'text',  name:'Doc5.txt', src:'media/tema5/tema5.txt' },
+      { type:'image', name:'Immagine 1', src:'media/tema5/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema5/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema5/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema5/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema5/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema5/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema5/img07.jpg' },
+      { type:'image', name:'Immagine 8', src:'media/tema5/img08.jpg' },
+      { type:'image', name:'Immagine 9', src:'media/tema5/img09.jpg' },
+      { type:'image', name:'Immagine 10', src:'media/tema5/img10.jpg' },
+      { type:'image', name:'Immagine 11', src:'media/tema5/img11.jpg' },
+      { type:'image', name:'Immagine 12', src:'media/tema5/img12.jpg' },
+      { type:'image', name:'Immagine 13', src:'media/tema5/img13.jpg' },
+      { type:'image', name:'Immagine 14', src:'media/tema5/img14.jpg' },
+      { type:'image', name:'Immagine 15', src:'media/tema5/img15.jpg' },
+      { type:'image', name:'Immagine 16', src:'media/tema5/img16.jpg' },
+      { type:'image', name:'Immagine 17', src:'media/tema5/img17.jpg' },
+      { type:'image', name:'Immagine 18', src:'media/tema5/img18.jpg' },
+      { type:'image', name:'Immagine 19', src:'media/tema5/img19.jpg' },
+      { type:'image', name:'Immagine 20', src:'media/tema5/img20.jpg' },
+      { type:'image', name:'Immagine 21', src:'media/tema5/img21.jpg' },
+      { type:'image', name:'Immagine 22', src:'media/tema5/img22.jpg' },
+      { type:'image', name:'Immagine 23', src:'media/tema5/img23.jpg' },
+      { type:'image', name:'Immagine 24', src:'media/tema5/img24.jpg' },
+      { type:'image', name:'Immagine 25', src:'media/tema5/img25.jpg' },
+      { type:'image', name:'Immagine 26', src:'media/tema5/img26.jpg' },
+      { type:'image', name:'Immagine 27', src:'media/tema5/img27.jpg' },
+      { type:'image', name:'Immagine 28', src:'media/tema5/img28.jpg' },
+      { type:'image', name:'Immagine 29', src:'media/tema5/img29.jpg' },
+  ]},
   
-    { id: 'tema6',  name: 'Il Louvre ottocento-novecento', files: [
+    { id: 'tema6',  name: 'Il Louvre nel Novecento', files: [
       { type:'text',  name:'Doc6.txt', src:'media/tema6/tema6.txt' },
       { type:'image', name:'Immagine 1', src:'media/tema6/img01.jpg' },
       { type:'image', name:'Immagine 2', src:'media/tema6/img02.jpg' },
