--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -65,8 +65,8 @@
       <div class="theme-option" data-value="tema2">[ ] Il Louvre Rinascimentale</div>
       <div class="theme-option" data-value="tema3">[ ] Il Louvre dello Stato Assoluto</div>
       <div class="theme-option" data-value="tema4">[ ] Il Louvre Rivoluzionario</div>
-      <div class="theme-option" data-value="tema5">[ ] Il Louvre Napoleonico</div>
-      <div class="theme-option" data-value="tema6">[ ] Il Louvre Ottocento–Novecento</div>
+      <div class="theme-option" data-value="tema5">[ ] Il Louvre nell'Ottocento-Novecento</div>
+      <div class="theme-option" data-value="tema6">[ ] Il Louvre nel Novecento</div>
       <div class="theme-option" data-value="tema7">[ ] Il Grand Louvre</div>
       <div class="theme-option" data-value="tema8">[ ] Il Louvre della Gioconda</div>
       <div class="theme-option" data-value="tema9">[ ] Il Louvre e la stampa</div>
