--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -34,20 +34,22 @@
     }
 
     /* Scanlines CRT effect */
-    body::after {
-      content: "";
-      position: fixed;
-      inset: 0;
-      pointer-events: none;
-      background: repeating-linear-gradient(
-        to bottom,
-        rgba(0,0,0,0) 0px,
-        rgba(0,0,0,0) 2px,
-        rgba(0,255,0,0.05) 3px
-      );
-      opacity: 0.18;
-      mix-blend-mode: screen;
-    }
+body::after {
+  content: "";
+  position: fixed;
+  inset: 0;
+  pointer-events: none;
+  z-index: -1;
+  background: repeating-linear-gradient(
+    to bottom,
+    rgba(0,0,0,0) 0px,
+    rgba(0,0,0,0) 2px,
+    rgba(0,255,0,0.05) 3px
+  );
+  opacity: 0.18;
+  mix-blend-mode: screen;
+}
+
   </style>
 </head>
 
