--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -161,7 +161,7 @@ const EPOCHS = [
   ]},
 
   
-    { id: 'tema5',  name: 'Il Louvre nell'Ottocento-Novecento', files: [
+    { id: 'tema5',  name: 'Il Louvre nell Ottocento-Novecento', files: [
       { type:'text',  name:'Doc5.txt', src:'media/tema5/tema5.txt' },
       { type:'image', name:'Immagine 1', src:'media/tema5/img01.jpg' },
       { type:'image', name:'Immagine 2', src:'media/tema5/img02.jpg' },
