--- a/quadra-translator/index.html
+++ b/quadra-translator/index.html
@@ -22,6 +22,7 @@
       border-bottom:1px solid #e9e9e9;
       padding:16px 18px;
       display:flex; align-items:flex-end; justify-content:space-between; gap:12px;
+      z-index: 10;
     }
     header h1{ margin:0; font-size:16px; letter-spacing:0.08em; text-transform:uppercase; }
     header .sub{ font-family:var(--mono); font-size:12px; color:var(--muted); }
@@ -248,7 +249,31 @@ const GLYPH_DEFS = {
 
   RELAZIONE: { frame: "open-top-bottom", fill: "empty" },
   INIZIO:    { frame: "open-top", fill: "empty" },
-  FINE:      { frame: "open-bottom-wide", fill: "empty" }
+  FINE:      { frame: "open-bottom-wide", fill: "empty" },
+
+  // --- NEW: Stato/Relazione
+  CONTENITORE:    { frame: "closed", fill: "empty", inner: "square", dot: "bottom" },
+  APERTO:         { frame: "open-top", fill: "empty" },
+  CHIUSO:         { frame: "closed", fill: "empty", nucleus: true },
+
+  PIENO:          { frame: "closed", fill: "solid" },
+  VUOTO:          { frame: "broken-corners", fill: "empty" },
+
+  DENTRO:         { frame: "closed", fill: "empty", inner: "square" },
+  FUORI:          { frame: "closed", fill: "empty", inner: "circle" },
+
+  VICINO:         { frame: "closed", fill: "empty", nucleus: true, dot: "top" },
+  LONTANO:        { frame: "closed", fill: "empty", nucleus: true, dot: "bottom" },
+
+  TRASFORMAZIONE: { frame: "open-top-bottom", fill: "empty", band: true },
+
+  // --- NEW: Astratti
+  CAUSA:          { frame: "closed", fill: "empty", diag: true },
+  SCOPO:          { frame: "closed", fill: "empty", inner: "triangle" },
+  POSSESSO:       { frame: "closed", fill: "empty", inner: "plus" },
+
+  POSSIBILE:      { frame: "broken-corners", fill: "empty", dot: "top" },
+  DOVERE:         { frame: "broken-corners", fill: "empty", band: true }
 };
 
 const ALL_TOKENS = Object.keys(GLYPH_DEFS);
@@ -340,6 +365,33 @@ function svgGlyph(token, options = {}){
     dot = `<circle cx="${cx}" cy="${cy}" r="3.2" fill="${fillSolid}" />`;
   }
 
+  // NEW: inner symbols (square/circle/plus/triangle)
+  let inner = "";
+  if(def.inner){
+    const cx = x0 + w/2, cy = y0 + h/2;
+    const s = w * 0.42;
+
+    if(def.inner === "square"){
+      inner = `<rect x="${cx - s/2}" y="${cy - s/2}" width="${s}" height="${s}" fill="none" stroke="${stroke}" stroke-width="2"/>`;
+    } else if(def.inner === "circle"){
+      inner = `<circle cx="${cx}" cy="${cy}" r="${s*0.28}" fill="none" stroke="${stroke}" stroke-width="2"/>`;
+    } else if(def.inner === "plus"){
+      const a = s*0.30;
+      inner =
+        `<line x1="${cx-a}" y1="${cy}" x2="${cx+a}" y2="${cy}" stroke="${stroke}" stroke-width="2" />` +
+        `<line x1="${cx}" y1="${cy-a}" x2="${cx}" y2="${cy+a}" stroke="${stroke}" stroke-width="2" />`;
+    } else if(def.inner === "triangle"){
+      const a = s*0.34;
+      inner = `<path d="M ${cx} ${cy-a} L ${cx-a} ${cy+a} L ${cx+a} ${cy+a} Z" fill="none" stroke="${stroke}" stroke-width="2"/>`;
+    }
+  }
+
+  // NEW: diagonal mark
+  let diag = "";
+  if(def.diag){
+    diag = `<line x1="${x0+w*0.22}" y1="${y0+h*0.78}" x2="${x0+w*0.78}" y2="${y0+h*0.22}" stroke="${stroke}" stroke-width="2"/>`;
+  }
+
   let absence = "";
   if(def.absence){
     const pts = [
@@ -375,6 +427,8 @@ function svgGlyph(token, options = {}){
       ${nucleus}
       ${band}
       ${dot}
+      ${inner}
+      ${diag}
       ${absence}
       ${negOverlay}
     </svg>
@@ -549,7 +603,15 @@ function refreshCacheList(){
 function renderLegend(){
   const legend = document.getElementById("legend");
   const legendLabels = document.getElementById("legendLabels");
-  const tokens = ["OGGETTO","PERSONA","LUOGO","ATTIVO","PASSIVO","FERMO","MOVIMENTO","PRESENTE","ASSENTE","RELAZIONE","INIZIO","FINE"];
+  const tokens = [
+    "OGGETTO","PERSONA","LUOGO",
+    "ATTIVO","PASSIVO",
+    "FERMO","MOVIMENTO",
+    "PRESENTE","ASSENTE",
+    "RELAZIONE","INIZIO","FINE",
+    "CONTENITORE","APERTO","CHIUSO","PIENO","VUOTO","DENTRO","FUORI","VICINO","LONTANO","TRASFORMAZIONE",
+    "CAUSA","SCOPO","POSSESSO","POSSIBILE","DOVERE"
+  ];
   legend.innerHTML = "";
   tokens.forEach(t => {
     const w = document.createElement("div");
@@ -561,19 +623,17 @@ function renderLegend(){
 }
 
 function populateSlots(){
-  const options = [
-    "",
+  const base = [
     "OGGETTO","PERSONA","LUOGO",
     "ATTIVO","PASSIVO",
     "FERMO","MOVIMENTO",
     "PRESENTE","ASSENTE",
     "RELAZIONE","INIZIO","FINE",
-    "!OGGETTO","!PERSONA","!LUOGO",
-    "!ATTIVO","!PASSIVO",
-    "!FERMO","!MOVIMENTO",
-    "!PRESENTE","!ASSENTE",
-    "!RELAZIONE","!INIZIO","!FINE"
+    "CONTENITORE","APERTO","CHIUSO","PIENO","VUOTO","DENTRO","FUORI","VICINO","LONTANO","TRASFORMAZIONE",
+    "CAUSA","SCOPO","POSSESSO","POSSIBILE","DOVERE"
   ];
+  const options = [""].concat(base).concat(base.map(t => "!" + t));
+
   slotEls.forEach(sel => {
     sel.innerHTML = options.map(o => `<option value="${o}">${o || "(vuoto)"}</option>`).join("");
   });
